include zip with attributes for compressed builds

--- a/.gitattributes
+++ b/.gitattributes
@@ -52,3 +52,5 @@
 *.prefab linguist-generated
 *.unity linguist-generated
 *.aar filter=lfs diff=lfs merge=lfs -text
+# our zip builds files 
+*.zip filter=lfs diff=lfs merge=lfs -text
